# email-clients

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/: FUNDING.yml
.github/workflows/: deny.yml  test.yml  udeps.yml
src/: configuration.rs  email.rs  errors.rs  lib.rs  traits.rs
src/clients/: mailersend.rs  memory.rs  mod.rs  smtp.rs  terminal.rs
tests/: clients.rs  mailersend.rs  memory.rs  smtp.rs  terminal.rs
