[package]
name = "email-clients"
version = "0.2.0"
edition = "2021"
authors = ["Amrit Ghimire"]
description = "This is library that provides user with easy to use email clients collection in rust."
readme = "README.md"
homepage = "https://github.com/amritghimire/email-clients"
repository = "https://github.com/amritghimire/email-clients"
keywords = ["email","client","library"]
license = "MIT"
categories = ["email"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "test-util"] }
secrecy = {version =  "0.8.0", optional=true, features = ["serde"] }
lettre = { version = "0.11.6", features = ["tracing", "tokio1-native-tls", "tokio1"], optional = true }
thiserror = "1.0.58"
log = "0.4.21"
document-features = { version = "0.2", optional = true }
reqwest = { version = "0.12.4", optional = true, features = ["json"] }




[features]
default = ["terminal"]
##! Enable various features for email clients.

### Print the email to terminal. Helpful for development purpose. Enabled by default.
terminal = []

### Send the email to memory. You can view tests to see how to use it in tests.
memory = []

### Enable smtp client based on lettre.
smtp = ["dep:secrecy", "dep:lettre"]

### Send email using mailersend
mailersend = ["dep:secrecy", "dep:reqwest"]

[dev-dependencies]
tokio-test = "0.4.4"
wiremock = "0.6.0"

[package.metadata.cargo-udeps.ignore]
normal = ["log"]
development = ["tokio-test"]

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
